<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="christopher_fontana.mccwireless.MainActivity">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtTitle"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/txtOffer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="17dp"
        android:id="@+id/txtOffer1"
        android:textSize="18sp" />

    <TextView
        android:text="@string/txtOffer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtOffer1"
        android:layout_alignLeft="@+id/txtOffer1"
        android:layout_alignStart="@+id/txtOffer1"
        android:layout_marginTop="5dp"
        android:id="@+id/txtOffer2"
        android:textSize="18sp" />

    <TextView
        android:text="@string/txtOffer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtOffer2"
        android:layout_alignLeft="@+id/txtOffer2"
        android:layout_alignStart="@+id/txtOffer2"
        android:layout_marginTop="5dp"
        android:id="@+id/txtOffer3"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtOffer3"
        android:layout_alignLeft="@+id/txtOffer3"
        android:layout_alignStart="@+id/txtOffer3"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp">

        <RadioButton
            android:text="@string/radPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radPhone"
            android:layout_weight="1"
            android:textSize="18sp" />

        <RadioButton
            android:text="@string/radPhoneTablet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radPhoneTablet"
            android:layout_weight="1"
            android:textSize="18sp" />

        <RadioButton
            android:text="@string/radPhoneTabletMBB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radPhoneTabletMBB"
            android:layout_weight="1"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:text="@string/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSubmit"
        android:layout_marginLeft="120dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/radioGroup2"
        android:layout_alignStart="@+id/radioGroup2"
        android:layout_marginBottom="200dp"
        android:textSize="16sp"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnSubmit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="103dp"
        android:id="@+id/txtChoice" />

</RelativeLayout>
